# siuru

./: .gitignore  .gitmodules  LICENSE  README.md
.ci/: run_sample_configurations.bash  run_sample_configurations_multithreaded.bash
code/: CMakeLists.txt  Dockerfile  IoT-AD.py  requirements.txt  setup.py  split_dataset.bash  start_kafka_pcap.bash  stop_kafka_pcap.bash
code/Kafka/: .env  .sinetstream_config.yml  README.md  docker-compose.yml  requirements.txt
code/Kafka/kafka-pcap/: Dockerfile
code/Kafka/kafka-pcap/packet-capture/: capture.sh
code/Kafka/test-apps/: test-consumer.py  test-producer.py
code/common/: features.py  functions.py  global_variables.py  pipeline_logger.py
code/cpp-extract-features/: main.cpp  setup.bash  sniffex.c
code/dataloaders/: IDataLoader.py  MQTTset.py  MQTTsetLoader.py  Mawi.py  MawiLoader.py  PacketSniffer.py  PcapFileLoader.py  XarrayPcapFileLoader.py  __init__.py
code/encoders/: DefaultEncoder.py  IDataEncoder.py  MultiSampleEncoder.py  UnlabeledEncoder.py  __init__.py
code/models/: IAnomalyDetectionModel.py  MLPAutoEncoder.py  RandomForest.py  __init__.py  mlp_autoencoder.py  random_forest.py
code/preprocessors/: CppPacketProcessor.py  FileLabelProcessor.py  FlowFeatureProcessor.py  HostFeatureProcessor.py  IPreprocessor.py  KitsuneLabelProcessor.py  PacketProcessor.py  WindowFlowFeatureProcessor.py  __init__.py  common.py
code/reporting/: AccuracyReporter.py  DistanceReporter.py  IReporter.py  InfluxDBReporter.py  __init__.py
configurations/: flow-pipeline-based.json.jinja  sample-packet-sniffer.json.jinja  (+4 more)
(+75 files in other folders)
